# ftp-test

./: .travis.yml  Dockerfile  README.md  docker-compose.yml  ftp-test.cabal  stack.yaml
scripts/: auto-reload.sh  ghci.sh
src/: Main.hs
