name:                ftp-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/imageintelligence/ftp-test#readme
license:             MIT
author:              Dominic Bou-Samra
maintainer:          dom@imageintelligence.com
copyright:           2017 Image Intelligence
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ftp-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ftphs
                     , MissingH
                     , hslogger
